styles/brendan.css
.brendan header {
  padding: 25px 10px;
}

.brendan article {
  padding: 0 10px 25px;
}

.brendan header h1 {
  float: left;
  line-height: 150px;
  font-size: 65px;
  margin: 0;
}

.brendan header .avatar {
  float: left;
  margin-right: 30px;
  border-radius: 150px;
}

.brendan .intro {
  margin: 25px 0 0;
}

article>h2 {
  margin: 0 0 15px;
}

ul.brendan_posts {
  list-style: none;
  margin-left: 0;
}

ul.brendan_posts li,
.brendan .photo-data li {
  margin-bottom: 20px;
}

ul.brendan_posts .post-date,
.brendan_post .post-date,
.brendan ul.listing.posts .post-date,
.brendan .photo-data .data-title {
  width: 125px;
  color: var(--secondary-colour);
  display: inline-block;
}

.brendan_post .post-date {
  float: left;
  clear: both;
  width: 100%;
}

.brendan_post article img:not(.data-icon) {
  clear: both;
  display: block;
}

.brendan_post .data-icon {
  vertical-align: text-bottom;
  margin-right: 4px;
}

.brendan .tag-list {
  margin: 0 0 20px;
  float: left;
}

.brendan_tags .tag-list {
  float: none;
}

.brendan .tag-list li {
  float: left;
  list-style: none outside none;
  margin: 0 25px 0 0;
}

.brendan_tags .tag-list li {
  float: none;
  margin: 0 0 20px;
}

.brendan .tag-link .icon {
  width: 15px;
  margin-right: 8px;
}

.brendan ul.listing {
  list-style: none;
  margin: 35px 0 0;
  float: left;
}

.brendan ul.listing li {
  float: left;
}

.brendan ul.listing,
.brendan ul.listing li,
.brendan ul.listing li>a {
  box-sizing: border-box;
}

.brendan ul.listing.twothirds {
  width: 66.6%;
}

.brendan ul.listing.third {
  width: 33.3%;
}

.brendan ul.listing.half {
  width: 50%;
}

.brendan ul.listing.full {
  width: 100%;
}

.brendan ul.listing li:not(.listing-header) {
  margin: 0 0 25px;
  line-height: 30px;
  float: left;
  width: 100%;
}

.brendan ul.listing li:not(.listing-header) a {
  width: 100%;
  float: left;
}

.brendan ul.listing.connect {
  margin-top: 10px;
}

.brendan ul.listing.connect li {
  width: 33.3%;
  margin: 25px 0 0;
}

.brendan ul.listing .icon {
  height: 30px;
  font-size: 30px;
  margin-right: 10px;
  float: left;
}

.brendan ul.listing:not(.connect) .label {
  float: left;
  width: 80%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

/* Photo posts and Gallery list views */

.brendan .photo-data {
  list-style: none outside none;
  margin: 20px 0;
}

ul.brendan_gallery {
  list-style: none outside none;
  margin: 40px 0;
  display: flex;
  flex-flow: row wrap;
  gap: 40px;
}

ul.brendan_gallery li {
  margin: 0;
  padding: 0;
  display: inline-block;
  align-self: flex-end;
  width: calc(33% - 80px);
  max-width: 500px;
  min-width: 270px;
}

ul.brendan_gallery img {
  width: 100%;
  height: auto;
  object-fit: cover;
}

ul.brendan_gallery a {
  display: inline-grid;
}

ul.brendan_gallery a:hover,
ul.brendan_gallery a:active {
  opacity: 0.5;
}

/* Medium sized screens */

@media only screen and (max-width: 750px) {

  .brendan header {
    height: 150px;
  }

  .brendan header h1 {
    line-height: 100px;
    font-size: 50px;
  }

  .brendan header .avatar {
    width: 100px;
    height: auto;
  }

  .brendan ul.listing.posts {
    display: none;
  }

  .brendan ul.listing,
  .brendan ul.listing.third,
  .brendan ul.listing.twothirds,
  .brendan ul.listing.half,
  .brendan ul.listing.full {
    width: 100%;
  }

  .brendan ul.listing.connect li {
    width: 50%;
    margin: 30px 0 0;
  }

  ul.brendan_posts .post-date,
  .brendan ul.listing.posts .post-date,
  .brendan .photo-data .data-title {
    display: block;
    width: auto;
  }

  ul.brendan_gallery {
    margin: 20px 0;
    gap: 20px;
  }

  ul.brendan_gallery li {
    width: calc(50% - 40px);
  }

}

/* Small sized screens */

@media only screen and (max-width: 550px) {

  .brendan header h1 {
    font-size: 25px;
  }

  .brendan header .avatar {
    width: 100px;
    height: auto;
  }

  .brendan ul.listing.connect li {
    width: 100%;
    margin: 30px 0 0;
  }

  ul.brendan_gallery {
    gap: 0;
  }

  ul.brendan_gallery li {
    width: 100%;
  }

}

/* Print styles */

@media print {

  .brendan header {
    height: auto;
    border: 0 none;
  }

}

